--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <picture>
                 <source media="(max-width:600px )" srcset="pacote-projeto-d010/imagens/dan-droids-pq.png">
-                <img src="imagens/dan-droids.png" alt="Primeiro mascote do androide">
+                <img src="../imagens/dan-droids.png" alt="Primeiro mascote do androide">
             </picture>
 
 
@@ -67,7 +67,7 @@
 
             <picture>
                 <source media="(max-width: 600px)" srcset="pacote-projeto-d010/imagens/irina-blok-pq.jpg">
-                <img src="imagens/irina-blok.jpg" alt="Irina Blok criadora do androide">
+                <img src="../imagens/irina-blok.jpg" alt="Irina Blok criadora do androide">
             </picture>
 
             <p>A ideia principal da Irina era representar tudo graficamente com poucos traços e de forma mais chapada. O
@@ -76,7 +76,7 @@
                 mascote do Android.</p>
 
         
-                <img class="img-robo" src="imagens/bugdroid.png" alt="Bugdroid">
+                <img class="img-robo" src="../imagens/bugdroid.png" alt="Bugdroid">
         
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que
